a406_backend/k8s/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3            # Nginx Pod를 3개 생성
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:stable    # 공식 nginx 이미지를 사용
          ports:
            - containerPort: 80    # 기본 HTTP 포트
