a406_backend/k8s/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort      # 클러스터 외부에서 접근 가능하도록 노드 포트를 할당
  selector:
    app: nginx        # 위 Deployment의 Pod와 매칭되는 라벨
  ports:
    - protocol: TCP
      port: 80          # 클러스터 내부 서비스 포트
      targetPort: 80    # 컨테이너의 포트
      nodePort: 30080   # 외부에서 접근할 포트
