a406_backend/k8s/fillit-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fillit-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - fillit.kro.kr
      secretName: tls-secret
  rules:
    - host: fillit.kro.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fillit-service
                port:
                  number: 8080
