a406_backend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fillit-ingress
  annotations:
    # cert-manager가 ClusterIssuer를 사용하여 인증서를 발급하도록 지정
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - fillit.kro.kr
      # cert-manager가 발급한 인증서와 키가 저장될 Secret 이름 - 실제 저장이 fillit-tls-qpr6s로 이루어져 변경
      secretName: fillit-tls-qpr6s
  rules:
    - host: fillit.kro.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fillit-service      # 백엔드 서비스 이름
                port:
                  number: 8080            # 백엔드 서비스 포트
